--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link href="https://fonts.googleapis.com/css?family=Julee|Rock+Salt" rel="stylesheet">
-    <title>React App</title>
+    <title>EMK Events Online</title>
   </head>
   <body>
     <noscript>
